--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  @apply bg-gray-900;
+/* body {
+  background-color: #111427;
+} */
+@layer base {
+  body {
+    @apply bg-nile-blue-950;
+  }
 }
